<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">
    <ImageView
        android:id="@+id/infomation"
        android:layout_width="match_parent"
...
        app:layout_constraintTop_toTopOf="@id/infomation"
        app:layout_constraintBottom_toBottomOf="@id/infomation"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/goal" />

    <TextView
        android:id="@+id/lives_value"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:digits="3"
        android:elevation="100dp"
        app:layout_constraintEnd_toEndOf="@id/lives"
        app:layout_constraintStart_toStartOf="@id/lives"
...
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@id/goal"/>

    <TextView
        android:id="@+id/score_value"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:elevation="100dp"
        app:layout_constraintEnd_toEndOf="@id/score"
        app:layout_constraintStart_toStartOf="@id/score"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/safe_point"
        app:layout_constraintVertical_bias="0.5" />


    <ImageView
        android:id="@+id/up_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:alpha="0.3"
        android:elevation="1000dp"
        android:src="@drawable/up_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:alpha="0.3"
        android:elevation="1000dp"
        android:src="@drawable/right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:alpha="0.3"
        android:elevation="1000dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
...
